<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="forward_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="course_android_developer">
        "Посмотрите этот курс: https://practicum.yandex.ru/android-developer/?from=catalog"
    </string>
    <string name="email_support" translatable="false">vasilievleonid199@gmail.com</string>
    <string name="message_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_user_agreement" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="Duration">Длительность</string>
    <string name="Album">Альбом</string>
    <string name="Year">Год</string>
    <string name="Genre">Жанр</string>
    <string name="Country">Страна</string>


</resources>