<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:orientation="vertical">


    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/mainScreen"
        android:layout_gravity="start"
        android:paddingBottom="40dp"/>

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/text_button"
            android:textSize="@dimen/main_screen_textSize"
            app:cornerRadius="@dimen/radius_corner_Button"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="1dp"
            app:iconTint="@color/black"
            android:layout_marginHorizontal="@dimen/main_screen_padding"
            android:layout_marginBottom="@dimen/main_screen_padding"/>


        <Button
            android:id="@+id/buttonLibrary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/library"
            android:textAllCaps="false"
            android:textColor="@color/text_button"
            android:textSize="22sp"
            app:cornerRadius="@dimen/radius_corner_Button"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconPadding="1dp"
            app:iconTint="@color/black"
            android:layout_marginHorizontal="@dimen/main_screen_padding"
            android:layout_marginBottom="@dimen/main_screen_padding"/>

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/text_button"
            android:textSize="@dimen/main_screen_textSize"
            app:cornerRadius="@dimen/main_screen_padding"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="1dp"
            app:iconTint="@color/black"
            android:layout_marginHorizontal="@dimen/main_screen_padding"
            android:layout_marginBottom="28dp" />

    </LinearLayout>

