<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/buttonBackSearch"
        app:navigationIcon="@drawable/arrowback"
        app:title="@string/search"
        app:titleTextAppearance="@style/toolbarSettings"
        style="@style/toolbarSettings"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Добавляем кнопку Done на клавиатуру (параметрами imeOptions и singleLine)-->
        <EditText
            android:id="@+id/search_edittext_view"
            android:hint="@string/search"
            style="@style/editTextSearchStyle"
            android:textCursorDrawable="@drawable/cursor"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <ImageButton
            android:id="@+id/clearIcon"
            style="@style/deliteSearchString"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="42dp">

        <LinearLayout
            android:id="@+id/storyTrack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/you_searched"
                android:textColor="?attr/colorSecondaryVariant"
                android:textFontWeight="500"
                android:textSize="19dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trackListSearchHistory"
                style="@style/recyclerSearch"
                android:layout_marginTop="8dp"
                tools:listitem="@layout/track_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                tools:itemCount="3"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearHistory"
                style="@style/buttonUpdate"
                android:layout_marginTop="24dp"
                android:text="@string/clear_history" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackListSearch"
            tools:listitem="@layout/track_item"
            style="@style/recyclerSearch"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/placeholderImage"
                style="@style/placeholderErrorImage" />

            <TextView
                android:id="@+id/placeholderMessage"
                style="@style/placeholderErrorText"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/updateButton"
                style="@style/buttonUpdate"/>
            

        </LinearLayout>

    </FrameLayout>



</LinearLayout>


