<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            app:layout_constraintGuide_begin="@dimen/dimen_24"
            style="@style/PlayerStyleGuideLine"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            app:layout_constraintGuide_end="@dimen/dimen_24"
            style="@style/PlayerStyleGuideLine"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:barrierMargin="80dp"
            app:constraint_referenced_tags="artist_Name_tag" />

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrowback" />

        <ImageView
            android:id="@+id/image_Cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="82dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/placeholder" />

        <TextView
            android:id="@+id/track_Name"
            android:layout_marginTop="@dimen/dimen_24"
            android:textSize="@dimen/textSize_22"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/image_Cover"
            style="@style/playerStyleTrack"/>

        <TextView
            android:id="@+id/artist_Name"
            android:layout_marginTop="12dp"
            android:textSize="@dimen/textSize_14"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTag="artist_Name_tag"
            app:layout_constraintTop_toBottomOf="@id/track_Name"
            style="@style/playerStyleTrack"/>

        <ImageButton
            android:id="@+id/add_to_my_tracklist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button_small"
            android:src="@drawable/add_to_my_tracklist"
            app:layout_constraintBottom_toTopOf="@id/barrier"
            app:layout_constraintEnd_toStartOf="@id/button_play"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <ImageButton
            android:id="@+id/button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button_play"
            android:src="@drawable/button_play"
            app:layout_constraintBottom_toTopOf="@id/barrier"
            app:layout_constraintEnd_toStartOf="@id/batton_like"
            app:layout_constraintStart_toEndOf="@id/add_to_my_tracklist"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <ImageButton
            android:id="@+id/batton_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button_small"
            android:src="@drawable/button_no_like"
            app:layout_constraintBottom_toTopOf="@id/barrier"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/button_play"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <TextView
            android:id="@+id/time_play"
            android:layout_width="40dp"
            android:layout_height="@dimen/dimen_16"
            android:layout_marginTop="12.33dp"
            android:fontFamily="@font/ys_display_medium"
            android:lines="1"
            android:text="00:00"
            android:textColor="?attr/colorSecondaryVariant"
            android:textFontWeight="500"
            android:textSize="@dimen/textSize_14"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/button_play" />

        <TextView
            android:id="@+id/duration"
            android:layout_marginTop="30dp"
            android:text="@string/Duration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time_play"
            style="@style/playerStyleAdditionalInformation"/>

        <TextView
            android:id="@+id/duration_value"
            android:layout_marginTop="30dp"
            app:layout_constraintBaseline_toBaselineOf="@id/duration"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/playerStyleAdditionalInformationValue"/>

        <TextView
            android:id="@+id/album"
            android:layout_marginTop="17dp"
            android:text="@string/Album"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/duration"
            style="@style/playerStyleAdditionalInformation"/>

        <TextView
            android:id="@+id/album_value"
            android:layout_marginTop="17dp"
            app:layout_constraintBaseline_toBaselineOf="@id/album"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/playerStyleAdditionalInformationValue"/>

        <TextView
            android:id="@+id/release"
            android:layout_marginTop="17dp"
            android:text="@string/Year"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album"
            style="@style/playerStyleAdditionalInformation"/>

        <TextView
            android:id="@+id/release_value"
            android:layout_marginTop="17dp"
            app:layout_constraintBaseline_toBaselineOf="@id/release"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/playerStyleAdditionalInformationValue"/>

        <TextView
            android:id="@+id/genre"
            android:layout_marginTop="17dp"
            android:text="@string/Genre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/release"
            style="@style/playerStyleAdditionalInformation"/>

        <TextView
            android:id="@+id/genre_value"
            android:layout_marginTop="17dp"
            app:layout_constraintBaseline_toBaselineOf="@id/genre"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/playerStyleAdditionalInformationValue"/>

        <TextView
            android:id="@+id/country"
            android:layout_marginTop="17dp"
            android:text="Страна"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genre"
            style="@style/playerStyleAdditionalInformation"/>

        <TextView
            android:id="@+id/country_value"
            android:layout_marginTop="17dp"
            app:layout_constraintBaseline_toBaselineOf="@id/country"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/playerStyleAdditionalInformationValue"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
